Update maven configuration.